[metadata]
name = loudify
description = Add a short description here!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyscaffold/pyscaffold/
author = Martyn
author_email = martijnvdijke600@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
project_urls =
    Documentation = https://pyscaffold.org/

[options]
packages = find_namespace:
install_requires =
    importlib-metadata;python_version<"3.8"
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.extras_require]
testing =
    pytest
    pytest-cov
    setuptools

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
addopts =
    --cov loudify --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.0
package = loudify
